--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
     <caption> <strong>Class 12 sqedule</strong></caption>
     <tr>
       <th>Monday</th>
-      <td>dgp</td>
+      <td>design</td>
       <td>b.ind</td>
-      <td>dmi</td>
+      <td>code</td>
       <td>pkn</td>
-      <td>pkwu</td>
+      <td>entrepreneur</td>
     </tr>
     <tr>
       <th>Tuesday</th>
-      <td>pkwu</td>
+      <td>entrepreneur</td>
       <td>english</td>
-      <td>dgp</td>
-      <td>animasi</td>
-      <td>dmi</td>
+      <td>design</td>
+      <td>animation</td>
+      <td>code</td>
     </tr>
     <tr>
       <th>Wednesday</th>
-      <td>dmi</td>
+      <td>code</td>
       <td>english</td>
       <td>sbk</td>
       <td>pav</td>
@@ -37,7 +37,7 @@
     <tr>
       <th>Thursday</th>
       <td>pai</td>
-      <td>pkwu</td>
+      <td>entrepreneur</td>
       <td>animation</td>
       <td>pav</td>
       <td>math</td>
