--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>sqedule</title>
+  <title>schedule</title>
 </head>
 <!-- th = table head -->
  <!-- tr = table rows (baris) -->
 <body>
   <table border="all" align="center" style="text-align: center;">
-    <caption> <strong>Class 12 sqedule</strong></caption>
+    <caption> <strong>Class 12 schedule</strong></caption>
     <tr>
       <th>Monday</th>
       <td>design</td>
