--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <tr>
       <th>Monday</th>
       <td>design</td>
-      <td>b.ind</td>
+      <td>Indonesia language</td></td>
       <td>code</td>
-      <td>pkn</td>
+      <td>citizen education</td>
       <td>entrepreneur</td>
     </tr>
     <tr>
       <th>Tuesday</th>
       <td>entrepreneur</td>
-      <td>english</td>
+      <td>english language</td>
       <td>design</td>
       <td>animation</td>
       <td>code</td>
@@ -29,8 +29,8 @@
     <tr>
       <th>Wednesday</th>
       <td>code</td>
-      <td>english</td>
-      <td>sbk</td>
+      <td>english language</td>
+      <td>cultural art</td>
       <td>pav</td>
       <td>fiqih</td>
     </tr>
