--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!-- th = table head -->
  <!-- tr = table rows (baris) -->
 <body>
-  <table border="all" align="center" style="text-align: center;">
+  <table border="all" align="center" style="text-align: center; margin-left: auto; margin-right: auto; border-collapse: collapse">
     <caption> <strong>Class 12 schedule</strong></caption>
     <tr>
       <th>Monday</th>
